# semantic-thinking-robot

./: '  .gitignore  .gitmodules  .pylintrc  .vimspector.json  2  3  README.md  delete-this.html  delete.html  delete.tex  delete2.html  example_graph.html  no  point-robot-example.py  point_robot_example.py  pyproject.toml  readme.md  tart  test.py  udo dmidecode -s system-serial-number
.github/workflows/: pylint.yml
backup_before_delete/: boxer_robot_acc_hgraph.py  point_robot_acc_hgraph.py
dashboard/: app.py  callback.py  callback_back.py  dashboard.html  dashboard.py  data.csv  figures.py  graph.html  hgraph.html  just_dashboard.py  mpc.html  mpc_data.feather  readme.md
dashboard/assets/: graph_template.html  style.css
dashboard/data/: configuration_grid.pickle  controller.pickle  hgraph.html  hypothesis_graph.html  knowledge_graph.html  occupancy_map.pickle
environments/: a_point_pushing_robot.py  boxer_driving_mpc_controller.py  boxer_driving_robot.py  bxr_driving_robot.py  cover.py  custom_hgraph.py  delete.html  delete2.html  find_path.py  manual_kgraph.py  maze.py  mp_example.py  mpc_test.py  mypickle.pickle  name.html  only_robot.py  point_driving_robot.py  point_pushing_robot.py  push_fix.py  push_mppi_env.py  readme.md  robot_brain_example.py  rrt_test.py  run_just_app.py  second_custom_hgraph.py  test_ghost_pose.py  test_mppi.py  testkg.py
environments/a_point_pushing_robot_results/: main.py
environments/benchmark/: README.md  blockade_boxer.py  cover.py  delete.html  hgraph.py  hgraph_example.py  legend.py  surrounded.py  swap.py
environments/blocking_object/: blocking_object.py  objects.py
environments/manual_env/: point_box.py
environments/mppi_push/: mppi_pushing.py  obstacles.py
environments/objects/: boxes.py  create_shape.py  cylinders.py  spheres.py  urdf_objects.py  walls.py
environments/push_or_drive/: objects.py  push_or_drive.py
environments/push_point_env/: a_point_pushing_robot.py  main.py  pred_error_plot.py
environments/random_env/: main.py  rand_objects.py  random_drive_environment.py  random_environment.py  random_objects.py  random_push_environenment.py  random_push_environment.py  random_push_no_kgraph.py
environments/three_objects_to_escape/: objects.py  three_objects_to_escape.py
environments/two_pushes_to_freedom/: objects.py  two_pushes_to_freedom.py
gijsExamples/: point_driving_robot.py  point_pushing_robot.py  robot_brain_example.py
gijsRobot/: __init__.py
gijsRobot/envs/: __init__.py  acc.py  gijsRobotEnv.py  vel.py
gijsRobot/resources/: gijsRobot.py
helper_functions/: extract_object_info.py  figures.py  geometrics.py  readme.md
images/bugs/: readme.md
images/results/: time_plot.py
lit_study_benchmark/: hgraph_visual_example.py  kgraph_visual_example.py
logger/: hlogger.py  readme.md
logger/logs/: .gitignore  task_log_001.json  task_log_002.json  (+33 more)
manual_tests/: custom_hgraph.py  mp_example.py  second_custom_hgraph.py  test_mppi.py  testkg.py
reports/: readme.md
results/: time_plot.py
robot_brain/: Configuration.py  Controller.py  Dynamics.py  Object.py  RBrain.py  State.py  configuration.py  dynamics.py  exceptions.py  global_variables.py  main_brain.py  object.py  obstacle.py  rbrain.py  readme.md  state.py  system_model.py
tests/: graph_unit_test.py  node_unit_test.py  readme.md  state_unit_test.py  test_readme.md
(+723 files in other folders)
