[tool.poetry]
name = "robot_brain"
version = "0.1.0"
description = "Robot learning the environment by interaction."
authors = ["Gijs Groote <gijsgroote@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pybullet = "^3.2.1"
gym = "^0.21.0"
numpy = "^1.10.0"
casadi = "^3.5.5"
# motion-planning-scenes = {version = "^0.1.1"}
motion-planning-scenes = {git = "https://github.com/GijsGroote/motion_planning_scenes.git", rev = "ft-add-cuboid"}
pynput = {version = "^1.7.6"}
multiprocess = {version = "^0.70.12"}
urdfpy = {git = "https://git@github.com/maxspahn/urdfpy.git", rev = "fix-networkx-dependency"}
urdfenvs = {git = "https://github.com/maxspahn/gym_envs_urdf.git", rev = "develop"}
do-mpc = "^4.3.2"
pyvis = "^0.1.9"
mpld3 = "^0.5.7"
dash = "^2.3.0"
plotly = "^5.6.0"
pandas = "^1.4.1"
pyorbital = "^1.7.1"
pyarrow = "^7.0.0"
dash-dangerously-set-inner-html = "^0.0.2"
beautifulsoup4 = "^4.10.0"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
