[tool.poetry]
name = "robot_brain"
version = "0.1.1"
description = "Robot learning the environment by interaction."
authors = ["Gijs Groote <gijsgroote@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urdfpy = {git = "https://git@github.com/maxspahn/urdfpy.git", rev = "fix-networkx-dependency"}
motion-planning-scenes = {path = "../motion_planning_scenes"}
urdfenvs = {path = "../gym_envs_urdf"}
pybullet = "^3.2.1"
gym = "^0.21.0"
numpy = "^1.10.0"
multiprocess = {version = "^0.70.12"}
do-mpc = "^4.3.2"
pyvis = "^0.1.9"
mpld3 = "^0.5.7"
dash = "^2.3.0"
plotly = "^5.6.0"
pandas = "^1.4.1"
pyorbital = "^1.7.1"
pyarrow = "^7.0.0"
pynput = {version = "^1.7.6"}
dash-dangerously-set-inner-html = "^0.0.2"
beautifulsoup4 = "^4.10.0"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
